# lib/api-spec/openapi.yaml
@@ -1348,7 +1348,7 @@ components:
 
     ContainerContractWorkflowResult:
       type: object
-      required: [contract, assignment, appointment, serviceRequest]
+      required: [contract, assignment, appointment]
       properties:
         contract:
           $ref: "#/components/schemas/ContainerSystemRecord"
@@ -1359,6 +1359,8 @@ components:
         serviceRequest:
           type: object
           additionalProperties: true
+        workOrder:
+          $ref: "#/components/schemas/ContainerSystemRecord"
 
     ContainerSystemAudit:
       type: object
